--- a/views/home.edge
+++ b/views/home.edge
@@ -30,26 +30,32 @@
                   </template>
                   <v-card>
                     <v-card-title>
-                      <span class="text-h5">{{ formTitle }}</span>
+                      <span class="text-h5">@{{ formTitle }}</span>
                     </v-card-title>
 
                     <v-card-text>
                       <v-container>
                         <v-row>
                           <v-col cols="12" sm="6" md="4">
-                            <v-text-field v-model="editedItem.name" label="Dessert name"></v-text-field>
+                            <v-text-field v-model="editedItem.code" label="Internal code"></v-text-field>
                           </v-col>
                           <v-col cols="12" sm="6" md="4">
-                            <v-text-field v-model="editedItem.calories" label="Calories"></v-text-field>
+                            <v-text-field v-model="editedItem.name" label="Material Name"></v-text-field>
                           </v-col>
                           <v-col cols="12" sm="6" md="4">
-                            <v-text-field v-model="editedItem.fat" label="Fat (g)"></v-text-field>
+                            <v-text-field v-model="editedItem.supplier" label="Supplier"></v-text-field>
                           </v-col>
                           <v-col cols="12" sm="6" md="4">
-                            <v-text-field v-model="editedItem.carbs" label="Carbs (g)"></v-text-field>
+                            <v-text-field v-model="editedItem.stock" label="Current Stock"></v-text-field>
                           </v-col>
                           <v-col cols="12" sm="6" md="4">
-                            <v-text-field v-model="editedItem.protein" label="Protein (g)"></v-text-field>
+                            <v-text-field v-model="editedItem.expiry_date" label="Expiry Date"></v-text-field>
+                          </v-col>
+                          <v-col cols="12" sm="6" md="4">
+                            <v-text-field v-model="editedItem.order" label="On Order"></v-text-field>
+                          </v-col>
+                          <v-col cols="12" sm="6" md="4">
+                            <v-text-field v-model="editedItem.stock_status" label="Stock Status"></v-text-field>
                           </v-col>
                         </v-row>
                       </v-container>
@@ -77,7 +83,7 @@
                     <v-card-actions>
                       <v-spacer></v-spacer>
                       <v-btn color="blue darken-1" text @click="closeDelete">Cancel</v-btn>
-                      <v-btn color="blue darken-1" text @click="deleteItemConfirm">OK</v-btn>
+                      <v-btn color="blue darken-1" :loading="loading" text @click="deleteItemConfirm">OK</v-btn>
                       <v-spacer></v-spacer>
                     </v-card-actions>
                   </v-card>
@@ -103,6 +109,7 @@
     </v-app>
   </div>
 
+  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script>
@@ -110,6 +117,7 @@
       el: '#app',
       vuetify: new Vuetify(),
       data: () => ({
+        loading: false,
         dialog: false,
         dialogDelete: false,
         headers: [
@@ -125,24 +133,33 @@
         desserts: [],
         editedIndex: -1,
         editedItem: {
+          code: '',
           name: '',
-          calories: 0,
-          fat: 0,
-          carbs: 0,
-          protein: 0,
+          supplier: '',
+          stock: 0,
+          expiry_date: '',
+          order: 0,
+          stock_status: '',
         },
         defaultItem: {
+          code: '',
           name: '',
-          calories: 0,
-          fat: 0,
-          carbs: 0,
-          protein: 0,
+          supplier: '',
+          stock: 0,
+          expiry_date: '',
+          order: 0,
+          stock_status: '',
         },
       }),
 
       computed: {
         formTitle () {
-          return this.editedIndex === -1 ? 'New Item' : 'Edit Item'
+          if(this.editedIndex === -1) {
+            return 'New Item' 
+          }  
+          else {
+            return 'Edit Item'
+          }
         },
       },
 
@@ -186,8 +203,14 @@
         },
 
         deleteItemConfirm () {
-          this.desserts.splice(this.editedIndex, 1)
-          this.closeDelete()
+          this.loading = true
+          axios.delete(`/product/${this.editedIndex + 1}`).then(response => {
+            if(response.data.deleted){
+              this.desserts.splice(this.editedIndex, 1)
+              this.closeDelete()
+              this.loading = false
+              }
+            })
         },
 
         close () {
