--- a/views/home.edge
+++ b/views/home.edge
@@ -17,7 +17,7 @@
     <v-app>
       <v-main>
         <v-container>
-          <v-data-table :search="search" :headers="headers" :items="desserts" sort-by="calories" class="elevation-1">
+          <v-data-table :search="search" :headers="headers" :items="desserts" class="elevation-1">
             <template v-slot:top>
               <v-toolbar flat>
                 <v-toolbar-title>Data</v-toolbar-title>
