--- a/views/home.edge
+++ b/views/home.edge
@@ -95,10 +95,10 @@
               </v-toolbar>
             </template>
             <template v-slot:item.actions="{ item }">
-              <v-icon small class="mr-2" @click="editItem(item)">
+              <v-icon medium class="mr-2" @click="editItem(item)">
                 mdi-pencil
               </v-icon>
-              <v-icon small @click="deleteItem(item)">
+              <v-icon medium @click="deleteItem(item)">
                 mdi-delete
               </v-icon>
             </template>
