--- a/views/home.edge
+++ b/views/home.edge
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>System</title>
 </head>
 
@@ -20,7 +21,7 @@
           <v-data-table :search="search" :headers="headers" :items="desserts" class="elevation-1">
             <template v-slot:top>
               <v-toolbar flat>
-                <v-toolbar-title>Data</v-toolbar-title>
+                <v-toolbar-title>QC Materials</v-toolbar-title>
                 <v-spacer></v-spacer>
                 <v-dialog v-model="dialog" max-width="500px">
                   <template v-slot:activator="{ on, attrs }">
@@ -73,7 +74,7 @@
                   </v-card>
                 </v-dialog>
                 <v-form action="/logout" method="post" class="ml-2">
-                  <v-btn type="submit" color="warning" dark class="mr-2 mb-2">
+                  <v-btn type="submit" color="#ba0c0e" dark class="mr-2 mb-2">
                     logout
                   </v-btn>
                 </v-form>
